--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,20 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 
     <assertj.version>3.23.1</assertj.version>
-    <checkstyle.version>9.3</checkstyle.version>
+    <awaitility.version>4.2.0</awaitility.version>
+    <checkstyle.version>10.3.3</checkstyle.version>
+    <commons-lang3.version>3.12.0</commons-lang3.version>
     <junit.version>5.9.0</junit.version>
     <logback.version>1.3.0</logback.version>
+    <lombok.version>1.18.24</lombok.version>
+    <mockito.version>4.7.0</mockito.version>
+    <pulsar.version>2.10.1</pulsar.version>
     <slf4j.version>2.0.0</slf4j.version>
+    <testcontainers.version>1.17.3</testcontainers.version>
 
     <checkstyle.plugin.version>3.2.0</checkstyle.plugin.version>
     <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
@@ -63,9 +69,25 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${commons-lang3.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-client</artifactId>
+      <version>${pulsar.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
@@ -80,9 +102,33 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>${awaitility.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>pulsar</artifactId>
+      <version>${testcontainers.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -120,6 +166,8 @@
               <includes>
                 <include>etc/**/*.xml</include>
                 <include>.github/workflows/**/*.yml</include>
+                <include>doc/**/*.md</include>
+                <include>doc/**/*.puml</include>
               </includes>
               <trimTrailingWhitespace/>
               <endWithNewline/>
