--- a/rpc/pom.xml
+++ b/rpc/pom.xml
@@ -26,25 +26,24 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pulsar-recipes-long-running-tasks</artifactId>
-  <name>Long Running Tasks</name>
+  <artifactId>pulsar-recipes-rpc</artifactId>
+  <name>RPC</name>
 
   <properties>
-    <commons-math3.version>3.6.1</commons-math3.version>
+    <commons-pool.version>2.11.1</commons-pool.version>
+
+    <jacoco.branch.coverage>0.36</jacoco.branch.coverage>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
+      <artifactId>commons-pool2</artifactId>
+      <version>${commons-pool.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.pulsar</groupId>
       <artifactId>pulsar-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -63,29 +62,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-math3</artifactId>
-      <version>${commons-math3.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.awaitility</groupId>
-      <artifactId>awaitility</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
