--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.apache</groupId>
+    <artifactId>apache</artifactId>
+    <version>18</version>
+  </parent>
+
   <groupId>io.streamnative</groupId>
   <artifactId>pulsar-recipes</artifactId>
   <version>1.0.0-SNAPSHOT</version>
