--- a/.github/workflows/pr-build-and-test.yml
+++ b/.github/workflows/pr-build-and-test.yml
@@ -18,9 +18,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -33,15 +35,16 @@ jobs:
       - name: Validate Javadoc creation
         run: ./mvnw --no-transfer-progress --batch-mode javadoc:jar
 
-      - name: package surefire test results
+      - name: Package surefire test results
         if: failure()
         run: |
           rm -rf test-results
           mkdir test-results
           find . -type d -name "*surefire*" -exec cp --parents -R {} test-results/ \;
           zip -r test-results.zip test-results
-      - uses: actions/upload-artifact@v3
-        name: upload test-results
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: test-results
