--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
 
       - name: Changelog
         uses: Bullrich/generate-release-changelog@master
@@ -34,20 +40,10 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: 11
-
-      - name: Set up Maven
-        uses: s4u/setup-maven-action@v1.5.0
-        with:
-          maven-version: 3.8.6
-
-      - uses: s4u/maven-settings-action@v2.6.0
+      - name: Configure Maven settings
+        uses: s4u/maven-settings-action@v2.7.0
         with:
           servers: '[{"id": "ossrh", "username": "${{ secrets.SONATYPE_USERNAME }}", "password": "${{ secrets.SONATYPE_PASSWORD }}"}]'
 
       - name: Deploy to Maven Central
-        run: mvn clean deploy -DskipTests
+        run: ./mvnw clean deploy -DskipTests
