[feature] [client] Add two compnents to support imprecise priority messages

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
     <module>long-running-tasks</module>
     <module>rpc</module>
     <module>test</module>
+    <module>priority-messages</module>
   </modules>
 
   <scm>
@@ -129,6 +130,11 @@
       <dependency>
         <groupId>org.apache.pulsar</groupId>
         <artifactId>pulsar-client</artifactId>
+        <version>${pulsar.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.pulsar</groupId>
+        <artifactId>pulsar-client-api</artifactId>
         <version>${pulsar.version}</version>
       </dependency>
       <dependency>
